# CMakeSFML

./: CMakeLists.txt  GenerateAndBuild.bat  README.md
src/: CMakeLists.txt
src/CalcMod/: CMakeLists.txt  calc.cpp  calc.h
src/CalcMod/Driver/: CMakeLists.txt  main.cpp
src/CalcMod/SubCalc/: CMakeLists.txt  subcalc.cpp  subcalc.h
src/Updater/: CMakeLists.txt  updater.cpp  updater.h
